--- a/src/locales/tr/popup.json
+++ b/src/locales/tr/popup.json
@@ -16,7 +16,7 @@
       }
     },
     "elementSelector": {
-      "name": "EÖğe Seçici",
+      "name": "Öğe Seçici",
       "noAccess": "Bu siteye erişim izniniz yok"
     },
     "workflow": {
